Markdown cell change

--- a/examples/FluxAnalysis.ipynb
+++ b/examples/FluxAnalysis.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Flux Analysis\n",
+    "# Flux Analysis\n",
     "\n",
     "As for the Rate Of Production Analysis and Sensitivity Analysis first of all call the constructor of the Post Processor then acces the Flux Analysis.\n",
     "\n",
