Update ROPA, Sensitivity, Flux Analysis examples

--- a/examples/FluxAnalysis.ipynb
+++ b/examples/FluxAnalysis.ipynb
@@ -47,7 +47,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROPA available\n"
+     ]
+    }
+   ],
    "source": [
     "base_path = os.getcwd()\n",
     "kineticFolder = os.path.join(base_path, \"ROPA\", \"kinetics\")\n",
@@ -55,7 +63,7 @@
     "\n",
     "pp = pySMOKEpostproccesor(kinetic_mechanism = kineticFolder, \n",
     "                          results_folder = resultsFolder, \n",
-    "                          verbose=False)\n",
+    "                          verbose=True)\n",
     "\n",
     "G = pp.FluxAnalysis(specie = \"H2\", \n",
     "                    element = \"H\", \n",
