--- a/examples/ROPA.ipynb
+++ b/examples/ROPA.ipynb
@@ -62,14 +62,22 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROPA available\n"
+     ]
+    }
+   ],
    "source": [
     "kineticFolder = os.path.join(\"ROPA\", \"kinetics\")\n",
     "resultsFolder = os.path.join(\"ROPA\", \"Output\")\n",
     "\n",
     "PostProcessor = pySMOKEpostproccesor(kinetic_mechanism = kineticFolder, \n",
     "                                     results_folder = resultsFolder, \n",
-    "                                     verbose=False)"
+    "                                     verbose=True)"
    ]
   },
   {
@@ -77,6 +85,13 @@
    "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROPA successfully executed!\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -218,6 +233,13 @@
    "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROPA successfully executed!\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -361,6 +383,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROPA successfully executed!\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -490,13 +519,6 @@
     "ax.invert_yaxis()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
