--- a/examples/Sensitivity-01.ipynb
+++ b/examples/Sensitivity-01.ipynb
@@ -150,17 +150,87 @@
        "      <td>28</td>\n",
        "      <td>R29: H2O2+H=H2O+OH</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1.620996</td>\n",
+       "      <td>11</td>\n",
+       "      <td>R12: 2HO2=O2+H2O2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1.224434</td>\n",
+       "      <td>85</td>\n",
+       "      <td>R86: OH+NNH=H2O+N2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>-1.038747</td>\n",
+       "      <td>174</td>\n",
+       "      <td>R13(inf): 2OH(+M)=H2O2(+M)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>-0.674217</td>\n",
+       "      <td>87</td>\n",
+       "      <td>R88: O2+NNH=O2+H+N2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.601042</td>\n",
+       "      <td>88</td>\n",
+       "      <td>R89: NNH+NH=NH2+N2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>-0.508585</td>\n",
+       "      <td>10</td>\n",
+       "      <td>R11: H+HO2=H2+O2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0.476698</td>\n",
+       "      <td>74</td>\n",
+       "      <td>R75: H+N2H2=H2+NNH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>-0.221067</td>\n",
+       "      <td>6</td>\n",
+       "      <td>R7: 2OH=H2O+O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>-0.185856</td>\n",
+       "      <td>4</td>\n",
+       "      <td>R5: H+HO2=2OH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>-0.184764</td>\n",
+       "      <td>8</td>\n",
+       "      <td>R9: O2+M=2O+M</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Sensitivity-Coeff  Indices-0based         Reaction Name\n",
-       "0          97.737225               1         R2: H2+O=H+OH\n",
-       "1         -50.443333               3     R4: OH+HO2=O2+H2O\n",
-       "2           7.226691               2  R3: O2+H(+M)=HO2(+M)\n",
-       "3           3.226210               5       R6: O+HO2=O2+OH\n",
-       "4           2.642012              28    R29: H2O2+H=H2O+OH"
+       "    Sensitivity-Coeff  Indices-0based               Reaction Name\n",
+       "0           97.737225               1               R2: H2+O=H+OH\n",
+       "1          -50.443333               3           R4: OH+HO2=O2+H2O\n",
+       "2            7.226691               2        R3: O2+H(+M)=HO2(+M)\n",
+       "3            3.226210               5             R6: O+HO2=O2+OH\n",
+       "4            2.642012              28          R29: H2O2+H=H2O+OH\n",
+       "5            1.620996              11           R12: 2HO2=O2+H2O2\n",
+       "6            1.224434              85          R86: OH+NNH=H2O+N2\n",
+       "7           -1.038747             174  R13(inf): 2OH(+M)=H2O2(+M)\n",
+       "8           -0.674217              87         R88: O2+NNH=O2+H+N2\n",
+       "9            0.601042              88          R89: NNH+NH=NH2+N2\n",
+       "10          -0.508585              10            R11: H+HO2=H2+O2\n",
+       "11           0.476698              74          R75: H+N2H2=H2+NNH\n",
+       "12          -0.221067               6               R7: 2OH=H2O+O\n",
+       "13          -0.185856               4               R5: H+HO2=2OH\n",
+       "14          -0.184764               8               R9: O2+M=2O+M"
       ]
      },
      "execution_count": 3,
@@ -179,7 +249,7 @@
     "\n",
     "dic = {'Sensitivity-Coeff': coefficients,'Indices-0based': indexes, 'Reaction Name': names}\n",
     "df = pd.DataFrame(dic)\n",
-    "df.head()"
+    "df"
    ]
   },
   {
