--- a/examples/Sensitivity-01.ipynb
+++ b/examples/Sensitivity-01.ipynb
@@ -74,7 +74,7 @@
    ],
    "source": [
     "kineticFolder = os.path.join(\"Sensitivity\", \"kinetics\")\n",
-    "resultsFolder = os.path.join(\"Sensitivity\", \"Output\")\n",
+    "resultsFolder = os.path.join(\"Sensitivity\", \"Output-01\")\n",
     "\n",
     "PostProcessor = pySMOKEpostproccesor(kinetic_mechanism = kineticFolder, \n",
     "                                     results_folder = resultsFolder, \n",
