--- a/examples/Sensitivity-02.ipynb
+++ b/examples/Sensitivity-02.ipynb
@@ -26,7 +26,7 @@
     "Inside this notebook it is shown a more advanced use of the post-processor to visualize and compare the local sensitivity analysis in different conditions.\n",
     "\n",
     "<p>\n",
-    "    <img src=\"figures/ohx.png\" width=\"550\" height=\"800\" />\n",
+    "    <img src=\"examples/figures/ohx.png\" width=\"550\" height=\"800\" />\n",
     "</p>\n",
     "\n",
     "Inside the Figure reported below it is possible to see the profile of the molar fraction of OH evolving in time. Sometimes it is necessary to understand the underlying kinetics at different stages. So as it can be seen in the figure three different local value are selected and hereinafter the sensitivity analysis will be carried on to study the different situations.\n"
