--- a/examples/FluxAnalysis-01.ipynb
+++ b/examples/FluxAnalysis-01.ipynb
@@ -50,10 +50,10 @@
    "outputs": [],
    "source": [
     "base_path = os.getcwd()\n",
-    "kineticFolder = os.path.join(base_path, \"ROPA\", \"kinetics\")\n",
-    "resultsFolder = os.path.join(base_path, \"ROPA\", \"Output\")\n",
+    "kineticFolder = os.path.join(base_path, \"data\", \"ROPA-01\", \"kinetics\")\n",
+    "resultsFolder = os.path.join(base_path, \"data\", \"ROPA-01\", \"Output\")\n",
     "\n",
-    "pp = pySMOKEpostproccesor(kinetic_mechanism = kineticFolder, \n",
+    "pp = pySMOKEpostprocessor(kinetic_mechanism = kineticFolder, \n",
     "                          results_folder = resultsFolder, \n",
     "                          verbose=False)\n",
     "\n",
