--- a/examples/ROPA-01.ipynb
+++ b/examples/ROPA-01.ipynb
@@ -7,10 +7,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import sys\n",
-    "pp_path = os.path.join(\"..\", \"pySMOKEPostProcessor\")\n",
-    "sys.path.append(pp_path)\n",
-    "from pySMOKEpostprocessor import *\n",
+    "from pySMOKEPostProcessor.pySMOKEpostprocessor import pySMOKEpostprocessor\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np"
