Update examples and added Reaction Classes examples

--- a/examples/FluxAnalysis-01.ipynb
+++ b/examples/FluxAnalysis-01.ipynb
@@ -7,10 +7,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import sys\n",
-    "pp_path = os.path.join(\"..\", \"pySMOKEPostProcessor\")\n",
-    "sys.path.append(pp_path)\n",
-    "from pySMOKEpostprocessor import *\n",
+    "from pySMOKEPostProcessor import pySMOKEpostprocessor\n",
     "import networkx as nx\n",
     "import pydot\n",
     "from IPython.display import Image, display"
@@ -53,7 +50,7 @@
     "kineticFolder = os.path.join(base_path, \"data\", \"ROPA-01\", \"kinetics\")\n",
     "resultsFolder = os.path.join(base_path, \"data\", \"ROPA-01\", \"Output\")\n",
     "\n",
-    "pp = pySMOKEpostprocessor(kinetic_mechanism = kineticFolder, \n",
+    "pp = pySMOKEpostprocessor.pySMOKEpostprocessor(kinetic_mechanism = kineticFolder, \n",
     "                          results_folder = resultsFolder, \n",
     "                          verbose=False)\n",
     "\n",
