--- a/examples/ROPA-01.ipynb
+++ b/examples/ROPA-01.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from pySMOKEPostProcessor.pySMOKEpostprocessor import pySMOKEpostprocessor\n",
+    "from pySMOKEPostProcessor import pySMOKEpostprocessor as pp\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np"
@@ -72,7 +72,7 @@
     "kineticFolder = os.path.join(\"data\", \"ROPA-01\", \"kinetics\")\n",
     "resultsFolder = os.path.join(\"data\", \"ROPA-01\", \"Output\")\n",
     "\n",
-    "PostProcessor = pySMOKEpostprocessor(kinetic_mechanism = kineticFolder, \n",
+    "PostProcessor = pp.pySMOKEpostprocessor(kinetic_mechanism = kineticFolder, \n",
     "                                     results_folder = resultsFolder, \n",
     "                                     verbose=True)"
    ]
