--- a/examples/Sensitivity-01.ipynb
+++ b/examples/Sensitivity-01.ipynb
@@ -7,10 +7,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import sys\n",
-    "pp_path = os.path.join(\"..\", \"pySMOKEPostProcessor\")\n",
-    "sys.path.append(pp_path)\n",
-    "from pySMOKEpostprocessor import *\n",
+    "from pySMOKEPostProcessor import pySMOKEpostprocessor as pp\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np"
@@ -76,7 +73,7 @@
     "kineticFolder = os.path.join(\"data\", \"Sensitivity-01\", \"kinetics\")\n",
     "resultsFolder = os.path.join(\"data\", \"Sensitivity-01\", \"Output-01\")\n",
     "\n",
-    "PostProcessor = pySMOKEpostprocessor(kinetic_mechanism = kineticFolder, \n",
+    "PostProcessor = pp.pySMOKEpostprocessor(kinetic_mechanism = kineticFolder, \n",
     "                                     results_folder = resultsFolder, \n",
     "                                     verbose=True)"
    ]
