--- a/examples/Stoichiometric Coefficients Visualization.ipynb
+++ b/examples/Stoichiometric Coefficients Visualization.ipynb
@@ -8,10 +8,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import sys\n",
-    "pp_path = os.path.join(\"..\", \"pySMOKEPostProcessor\")\n",
-    "sys.path.append(pp_path)\n",
-    "from maps.StoichiometricMap import *\n",
+    "from pySMOKEPostProcessor.maps import StoichiometricMap\n",
+    "from pySMOKEPostProcessor.maps import KineticMap\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.ticker as mticker\n",
     "import pandas as pd\n",
@@ -28,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "36ea670e",
    "metadata": {},
    "outputs": [
@@ -64,14 +62,6 @@
     "ax.set_yticklabels(reactions)\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "90b048b7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
