plot function separated, description classes added, fix warning python3.10 for groupby

--- a/examples/ReactionClasses.ipynb
+++ b/examples/ReactionClasses.ipynb
@@ -9,7 +9,48 @@
    "source": [
     "import os\n",
     "from pySMOKEPostProcessor import FluxByClass\n",
+    "from pySMOKEPostProcessor.plots.heatmaps import plot_heatmap\n",
+    "from pySMOKEPostProcessor.plots.heatmaps import save_fig\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b056f001",
+   "metadata": {},
+   "source": [
+    "# Rate Of Production Analysis by Reaction Class\n",
+    "The rate of production analysis can be organized according to reaction classes. Different levels of classification are available:\n",
+    "\n",
+    "> * `Class type`: defined by the user in **rxn_class_groups.txt** text file (see data/Classes). Broad classification (e.g., bond-fission, H-abstraction, growth)\n",
+    "> * `Reaction type`: reaction channels belonging to a certain class type. These are listed within the class types in the text file. They must also be present in the **kinetics.xml** file (hard coded)\n",
+    "> * `Species type`: type of species that defines the functional group participating to the reaction (e.g., A1-M is the aromatic ring in its molecular form, A1-R is a phenyl-like radical)\n",
+    "> * `Bimolecular type`: classification according to unimolecular/bimolecular reaction type, accounting for the nature of the reacting species (M, R, RSR: molecule, radical, resonance-stabilized radical). This classification does not require specific input.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a8544880",
+   "metadata": {},
+   "source": [
+    "Required input for the different steps\n",
+    "\n",
+    "* `FluxByClass`: class that handles the classification of reactions. Input arguments are:\n",
+    "    > * `kin_xml_fld` (*str*): path to the folder containing the files relative to the kinetic mechanism named directly, after the pre-processing by OpenSMOKE++: **kinetics.xml** and **reaction_names.xml**.\n",
+    "    > * `class_groups_fld` (*str*): path to the folder containing the **rxn_class_groups.txt** file with the groups.\n",
+    "    \n",
+    "* `FluxByClass.process_flux`: assigns the reaction flux according to the user requests. for now, only global flux analysis is available. This function calls the pySMOKEpostprocessor.RateOfProductionAnalysis. Input arguments are:\n",
+    "    > * `species_list` (*list*): list of species to perform ROPA for\n",
+    "    > * `simul_fld` (*str*): path to the folder containing OpenSMOKE++ output simulation files. **Output.xml** is required.\n",
+    "    > * `ropa_type` (*str*): type of ROPA (global is the only available option for now).\n",
+    "    * `n_of_rxns` (*int*, default: 100): number of reactions to be included in the flux analysis (from those with the highest flux).\n",
+    "\n",
+    "* `FluxByClass.sort_and_filter`: organizes classes for each species flux by reaction class and sums fluxes in the same class. filters classes (i.e., reduces the set of reactions considered) by user-defined criteria. requires:\n",
+    "    > * `sortlist` (*list(str)*): criteria to be considered hierarchically for reaction flux sorting. allowed strings: **classtype,speciestype,reactiontype,bimoltype**. For instance, ['speciestype','reactiontype'] groups reactions according to species type, and within that set the reactions are grouped according to reaction type.\n",
+    "    > * `filter_dct` (*dict: list(str)*): filtering for set of classes. dictionary keys correspond to criteria allowed for sortlist, and the value is a list of strings that have to be contained in the class filtered. For instance, {'classtype':['ADD','ABS']} filters all reactions whose classtype includes either 'ADD' or 'ABS' (i.e., abstractions and addition reactions).\n",
+    "    > * `threshold` (*float*): minimum relative flux to be considered in the classification. Reactions with smaller flux will be removed."
    ]
   },
   {
@@ -27,6 +68,18 @@
     "simul_flds ={\n",
     "    'example-c6h6' : os.path.join(base_path, 'data', 'Classes', 'simul', 'Output'),\n",
     "    }"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "d2bda844",
+   "metadata": {},
+   "source": [
+    "Example 1:\n",
+    "provide a list of species to analyze simulations of benzene oxidation\n",
+    "sort by three different criteria: classtype, speciestype, bimoltype\n",
+    "Each of them is considered separately, so you will get three different datasets and plots. The number of reactions considered for each flux is 200 and the threshold for the relative flux is 1%."
    ]
   },
   {
@@ -50,32 +103,70 @@
     "filter_dcts = [{},{},{}]   # filter according to selected criteria in name\n",
     "threshs = [1e-2,1e-2,1e-2] # threshold for minimum flux\n",
     "n_of_rxns = 200            # max n of rxns to consider for flux (default: 100)\n",
-    "sortlists = [['classgroup'],['speciestype'],['bimoltype']] # classgroup, speciestype, subclass, bimoltype (R+R, RSR+RSR, M+M, ETC) # sum if both apply and sort by this criteria\n",
+    "sortlists = [['classtype'],['speciestype'],['bimoltype']] # classtype, speciestype, reactiontype, bimoltype (R+R, RSR+RSR, M+M, ETC) # sum if both apply and sort by this criteria\n",
     "\n",
     "# assign class\n",
     "fluxbyclass = FluxByClass(kin_xml_fld, class_groups_fld, verbose = False)\n",
     "# assign flux and process according to selected criteria\n",
     "for simul_name, simul_fld in simul_flds.items():\n",
-    "    fluxbyclass.process_flux(species_list, simul_name, simul_fld, n_of_rxns = n_of_rxns, ropa_type = 'global')\n",
-    "    fluxbyclass.sort_and_filter(sortlists, filter_dcts, threshs, plt_fld)\n",
-    "    \n",
+    "    fluxbyclass.process_flux(species_list, simul_fld, ropa_type = 'global')\n",
+    "    for i, sortlist in enumerate(sortlists):\n",
+    "        sortdf = fluxbyclass.sort_and_filter(sortlists[i], filter_dcts[i], threshs[i])\n",
+    "        # plot heatmap\n",
+    "        fig = plot_heatmap(sortdf)\n",
+    "        # save heatmap\n",
+    "        save_fig(fig, plt_fld, sortlist, simul_name)\n",
+    "        "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "fa256229",
+   "metadata": {},
+   "source": [
+    "Example 2: the reactions are now classified hierarchically according to [classtype][bimoltype]. The reactions are filtered such that only additions and abstraction reactions (of additions and abstraction class types) are considered. The threshold to filter the flux is 0.1%."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8035942f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# additional type of classification: filter addition and abstraction reactions\n",
     "species_list =['C6H6','C6H5','C5H6','C5H5','INDENE','C10H8','BIPHENYL']\n",
-    "filter_dcts = [{'classgroup':['ADD', 'HABS']}] # filter according to selected criteria in name\n",
-    "threshs = [1e-3,] # threshold for minimum flux\n",
-    "sortlists = [['classgroup','bimoltype']] # classgroup, speciestype, subclass, bimoltype (R+R, RSR+RSR, M+M, ETC) # sum if both apply and sort by this criteria\n",
+    "filter_dct = {'classtype':['ADD', 'HABS']} # filter according to selected criteria in name\n",
+    "thresh = 1e-3 # threshold for minimum flux\n",
+    "sortlist = ['classtype','bimoltype'] # classtype, speciestype, subclass, bimoltype (R+R, RSR+RSR, M+M, ETC) # sum if both apply and sort by this criteria\n",
     "\n",
     "# assign class\n",
     "fluxbyclass = FluxByClass(kin_xml_fld, class_groups_fld, verbose = False)\n",
     "for simul_name, simul_fld in simul_flds.items():\n",
-    "    fluxbyclass.process_flux(species_list, simul_name, simul_fld, ropa_type = 'global')\n",
-    "    fluxbyclass.sort_and_filter(sortlists, filter_dcts, threshs, plt_fld)"
+    "    fluxbyclass.process_flux(species_list, simul_fld, ropa_type = 'global')\n",
+    "    sortdf = fluxbyclass.sort_and_filter(sortlist, filter_dct, thresh)\n",
+    "    # plot heatmap\n",
+    "    fig = plot_heatmap(sortdf)\n",
+    "    # save heatmap\n",
+    "    save_fig(fig, plt_fld, sortlist, simul_name)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c96952f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# show heatmaps\n",
+    "plt.show()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -89,7 +180,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.5 (default, Sep  3 2020, 21:29:08) [MSC v.1916 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+   }
   }
  },
  "nbformat": 4,
