--- a/examples/Sensitivity-01.ipynb
+++ b/examples/Sensitivity-01.ipynb
@@ -67,8 +67,19 @@
       "ROPA available\n",
       "Sensitivity analysis available on: NO  H2  O2  temperature  \n",
       "Computational domain: \n",
-      " * Lower Bound: 0.0   Upper Bound: 0.009888393555803\n",
-      " * Middle value: 0.0049441967779015\n"
+      " * Lower Bound: 0.0   Upper Bound: 0.009888\n",
+      " * Middle value: 0\n",
+      "Available quantities for the abscissae variable:\n",
+      " * time [s]\n",
+      " * temperature [K]\n",
+      " * pressure [Pa]\n",
+      " * mol-weight [kg/kmol]\n",
+      " * density [kg/m3]\n",
+      " * heat-release [W/m3]\n",
+      " * conversion-H2\n",
+      " * conversion-O2\n",
+      " * conversion-N2\n",
+      " * All the mass fraction of the species inside the scheme (e.g. H2 or O2)\n"
      ]
     }
    ],
