--- a/examples/FluxAnalysis-01.ipynb
+++ b/examples/FluxAnalysis-01.ipynb
@@ -51,15 +51,26 @@
      "text": [
       "ROPA available\n",
       "Computational domain: \n",
-      " * Lower Bound: 0.0   Upper Bound: 0.006515532569298\n",
-      " * Middle value: 0.003257766284649\n"
+      " * Lower Bound: 0.0   Upper Bound: 0.006516\n",
+      " * Middle value: 0\n",
+      "Available quantities for the abscissae variable:\n",
+      " * time [s]\n",
+      " * temperature [K]\n",
+      " * pressure [Pa]\n",
+      " * mol-weight [kg/kmol]\n",
+      " * density [kg/m3]\n",
+      " * heat-release [W/m3]\n",
+      " * conversion-H2\n",
+      " * conversion-O2\n",
+      " * conversion-N2\n",
+      " * All the mass fraction of the species inside the scheme (e.g. H2 or O2)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_338051/2799409854.py:20: DeprecationWarning: nx.nx_pydot.to_pydot depends on the pydot package, which hasknown issues and is not actively maintained.\n",
+      "/tmp/ipykernel_466398/2799409854.py:20: DeprecationWarning: nx.nx_pydot.to_pydot depends on the pydot package, which hasknown issues and is not actively maintained.\n",
       "\n",
       "See https://github.com/networkx/networkx/issues/5723\n",
       "  P = nx.drawing.nx_pydot.to_pydot(G)\n"
@@ -128,7 +139,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_338051/4208098854.py:5: DeprecationWarning: nx.nx_pydot.to_pydot depends on the pydot package, which hasknown issues and is not actively maintained.\n",
+      "/tmp/ipykernel_466398/4208098854.py:5: DeprecationWarning: nx.nx_pydot.to_pydot depends on the pydot package, which hasknown issues and is not actively maintained.\n",
       "\n",
       "See https://github.com/networkx/networkx/issues/5723\n",
       "  P = nx.drawing.nx_pydot.to_pydot(H)\n"
@@ -171,7 +182,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_338051/3760072166.py:2: DeprecationWarning: nx.nx_pydot.to_pydot depends on the pydot package, which hasknown issues and is not actively maintained.\n",
+      "/tmp/ipykernel_466398/3760072166.py:2: DeprecationWarning: nx.nx_pydot.to_pydot depends on the pydot package, which hasknown issues and is not actively maintained.\n",
       "\n",
       "See https://github.com/networkx/networkx/issues/5723\n",
       "  P = nx.drawing.nx_pydot.to_pydot(H)\n"
