--- a/examples/ROPA-01.ipynb
+++ b/examples/ROPA-01.ipynb
@@ -66,8 +66,19 @@
      "text": [
       "ROPA available\n",
       "Computational domain: \n",
-      " * Lower Bound: 0.0   Upper Bound: 0.006515532569298\n",
-      " * Middle value: 0.003257766284649\n"
+      " * Lower Bound: 0.0   Upper Bound: 0.006516\n",
+      " * Middle value: 0\n",
+      "Available quantities for the abscissae variable:\n",
+      " * time [s]\n",
+      " * temperature [K]\n",
+      " * pressure [Pa]\n",
+      " * mol-weight [kg/kmol]\n",
+      " * density [kg/m3]\n",
+      " * heat-release [W/m3]\n",
+      " * conversion-H2\n",
+      " * conversion-O2\n",
+      " * conversion-N2\n",
+      " * All the mass fraction of the species inside the scheme (e.g. H2 or O2)\n"
      ]
     }
    ],
