--- a/examples/Formation_Rates.py.ipynb
+++ b/examples/Formation_Rates.py.ipynb
@@ -13,14 +13,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "402e3b0b",
+   "cell_type": "markdown",
+   "id": "b16727bf",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "kineticFolder = os.path.join(\"data\", \"ROPA-01\", \"kinetics\")\n",
-    "resultsFolder = os.path.join(\"data\", \"ROPA-01\", \"Output\")"
+    "**Formation Rates**: function that returns the formation rate in [kmol/m3/s] or [kg/m3/s] of a specific species.\n",
+    "   > * `abscissae_name` ( *string* ): name of the abscissae for which is desired the plot of the reaction rate.\n",
+    "   > * `specie` ( *string* ): specie for which is desired the formation rate.\n",
+    "   > * `units` ( *string* ): specify the unit of measurement for which is required the formation rate. Types are **mass** ([kg/m3/s]) and **moles** ([kmol/m3/s]).\n",
+    "   > * `formation_rate_type` ( *string* ): Which kind of formation rate is required available type are **net**, **production** (only the production rate is computed and is strictly positive), **destruction** (only the destruction rate is computed and is strictly positive), **characteristic-time** which is calculated for the slected species as the ratio between the concentration and the destruction rate"
    ]
   },
   {
@@ -41,6 +42,9 @@
     }
    ],
    "source": [
+    "kineticFolder = os.path.join(\"data\", \"ROPA-01\", \"kinetics\")\n",
+    "resultsFolder = os.path.join(\"data\", \"ROPA-01\", \"Output\")\n",
+    "\n",
     "abscissae, formation_rates = pp.GetFormationRates(kinetic_folder = kineticFolder,\n",
     "                                            output_folder = resultsFolder,\n",
     "                                            abscissae_name = 'time', \n",
