--- a/examples/Formation_Rates.ipynb
+++ b/examples/Formation_Rates.ipynb
@@ -13,6 +13,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b16727bf",
    "metadata": {},
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1f04ab90",
    "metadata": {},
    "outputs": [
