--- a/examples/notebooks/ROPA-01.ipynb
+++ b/examples/notebooks/ROPA-01.ipynb
@@ -256,6 +256,14 @@
     "ax.set_title(title)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8278f090",
+   "metadata": {},
+   "source": [
+    "## add example with mass ropa AN"
+   ]
   }
  ],
  "metadata": {
