--- a/examples/notebooks/Reaction_Rates.ipynb
+++ b/examples/notebooks/Reaction_Rates.ipynb
@@ -7,9 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append(\"/Users/anobili/Documents/GitHub/pySMOKEPostProcessor\")\n",
-    "import pySMOKEPostProcessor as pp\n",
+    "from pySMOKEPostProcessor import PostProcessor\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
