formation rate example slightly modified; sum of reaction rates added to notebook examples

--- a/examples/notebooks/Formation_Rates.ipynb
+++ b/examples/notebooks/Formation_Rates.ipynb
@@ -8,7 +8,6 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append(\"/Users/tdinelli/Documents/GitHub/pySMOKEPostProcessor\")\n",
     "import os\n",
     "from pySMOKEPostProcessor import PostProcessor\n",
     "from pySMOKEPostProcessor import OpenSMOKEppXMLFile\n",
@@ -21,10 +20,13 @@
    "metadata": {},
    "source": [
     "**Formation Rates**: function that returns the formation rate in [kmol/m3/s] or [kg/m3/s] of a specific species.\n",
-    "   > * `abscissae_name` ( *string* ): name of the abscissae for which is desired the plot of the reaction rate.\n",
     "   > * `specie` ( *string* ): specie for which is desired the formation rate.\n",
-    "   > * `units` ( *string* ): specify the unit of measurement for which is required the formation rate. Types are **mass** ([kg/m3/s]) and **moles** ([kmol/m3/s]).\n",
-    "   > * `formation_rate_type` ( *string* ): Which kind of formation rate is required available type are **net**, **production** (only the production rate is computed and is strictly positive), **destruction** (only the destruction rate is computed and is strictly positive), **characteristic-time** which is calculated for the slected species as the ratio between the concentration and the destruction rate"
+    "   > * `units` ( *string* ): specify the unit of measurement for which is required the formation rate. Types are **mass** ([kg/m3/s]) and **moles** ([kmol/m3/s]). Default: **moles**\n",
+    "   > * `formation_rate_type` ( *string* ): Which kind of formation rate is required. choose among:\n",
+    "      >> * **net**\n",
+    "      >> * **production** (only the production rate is computed and is strictly positive), \n",
+    "      >> * **destruction** (only the destruction rate is computed and is strictly positive), \n",
+    "      >> * **characteristic-time** ratio between the concentration and the destruction rate (for the selected species)"
    ]
   },
   {
@@ -140,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
