--- a/examples/notebooks/Formation_Rates.ipynb
+++ b/examples/notebooks/Formation_Rates.ipynb
@@ -46,8 +46,8 @@
     }
    ],
    "source": [
-    "kineticFolder = os.path.join(\"..\", \"data\", \"ROPA-01\", \"kinetics\")\n",
-    "resultsFolder = os.path.join(\"..\", \"data\", \"ROPA-01\", \"Output\")\n",
+    "kineticFolder = os.path.join(\"..\", \"data\", \"ROPA\", \"kinetics\")\n",
+    "resultsFolder = os.path.join(\"..\", \"data\", \"ROPA\", \"Output\")\n",
     "\n",
     "pp = PostProcessor(kineticFolder, resultsFolder)\n",
     "output = OpenSMOKEppXMLFile(resultsFolder, kineticFolder)\n",
