--- a/examples/notebooks/Sensitivity Analysis.ipynb
+++ b/examples/notebooks/Sensitivity Analysis.ipynb
@@ -137,8 +137,8 @@
    ],
    "source": [
     "\n",
-    "kineticFolder = os.path.join(\"..\", \"data\", \"Sensitivity-01\", \"kinetics\")\n",
-    "resultsFolder = os.path.join(\"..\", \"data\", \"Sensitivity-01\", \"Output-01\")\n",
+    "kineticFolder = os.path.join(\"..\", \"data\", \"Sensitivity\", \"kinetics\")\n",
+    "resultsFolder = os.path.join(\"..\", \"data\", \"Sensitivity\", \"Output\")\n",
     "\n",
     "pp = PostProcessor(kineticFolder, resultsFolder)\n",
     "\n",
