--- a/examples/notebooks/Sensitivity_Coefficients.ipynb
+++ b/examples/notebooks/Sensitivity_Coefficients.ipynb
@@ -44,8 +44,8 @@
     }
    ],
    "source": [
-    "kineticFolder = os.path.join(\"..\", \"data\", \"Sensitivity-01\", \"kinetics\")\n",
-    "resultsFolder = os.path.join(\"..\", \"data\", \"Sensitivity-01\", \"Output-01\")\n",
+    "kineticFolder = os.path.join(\"..\", \"data\", \"Sensitivity\", \"kinetics\")\n",
+    "resultsFolder = os.path.join(\"..\", \"data\", \"Sensitivity\", \"Output\")\n",
     "\n",
     "pp = PostProcessor(kineticFolder, resultsFolder)\n",
     "output = OpenSMOKEppXMLFile(resultsFolder, kineticFolder)\n",
