examples fixed and run

--- a/examples/notebooks/Cumulative-Rates.ipynb
+++ b/examples/notebooks/Cumulative-Rates.ipynb
@@ -40,18 +40,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "d7c546c8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "kin_xml_fld = os.path.join('..', 'data', 'Classes', 'kinetics-soot0')\n",
-    "simul_fld = os.path.join('..', 'data', 'Classes', 'Output-soot0')"
+    "kin_xml_fld = os.path.join('..', 'data', 'Soot-01', 'kinetics')\n",
+    "simul_fld = os.path.join('..', 'data', 'Soot-01',  'Output')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "0f2a49ee",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "94aa14e6",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "e6b3dbe9",
    "metadata": {},
    "outputs": [
@@ -189,8 +189,8 @@
    ],
    "source": [
     "# PRODUCTION AND CONSUMPTION OF C6H6 IN A BATCH REACTOR\n",
-    "kin_xml_fld = os.path.join('..', 'data', 'Classes', 'kinetics')\n",
-    "simul_fld = os.path.join('..', 'data', 'Classes', 'simul-batch/Output')\n",
+    "kin_xml_fld = os.path.join('..', 'data', 'ReactionClasses', 'kinetics')\n",
+    "simul_fld = os.path.join('..', 'data', 'ReactionClasses', 'Output-batch')\n",
     "species_list = ['C6H6','C6H5OH']\n",
     "rate_type = 'PC'  # P, C, PC\n",
     "x_axis = 'time'   # simulation of a counterflow flame - along axial coordinate\n",
@@ -224,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
