--- a/examples/notebooks/Reaction_Classes.ipynb
+++ b/examples/notebooks/Reaction_Classes.ipynb
@@ -8,9 +8,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from pySMOKEPostProcessor import (KineticMap, PostProcessor, FluxByClass, \n",
-    "                                  FDI, assignclass, merge_maps_byspecies, \n",
-    "                                  plot_heatmap, script_utils)"
+    "from pySMOKEPostProcessor import plot_heatmap\n",
+    "from pySMOKEPostProcessor import script_utils"
    ]
   },
   {
